--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
-    <link rel="stylesheet" href="../../Desktop/opdracht-2-3/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Flexbox opdracht 2 en 3</title>
 </head>
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
-    </div>
+
+
+<div class="navigatiebalk">
+    <div>ANALYTICA</div>
+    <ul class="navigatiebalklijst">
+        <li>About us</li>
+        <li>Strategy</li>
+        <li>Prices</li>
+        <li>Contact</li>
+    </ul>
+</div>
+
+<div class=titelsgecentreerd>
+    <h1>All Your Business Data in One Place</h1>
+    <h3 class="ondertitel">Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h3>
+</div>
+
+
+<div class="container-tekst-items">
+    <article class="item-tekst">
+        <p> "Lorem ipsum ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris."</p>
+    </article>
+    <article class="item-tekst">
+        <p> "Lorem ipsum ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. "</p>
+    </article>
+    <article class="item-tekst">
+        <p> "Lorem ipsum ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris."</p>
+    </article>
+
+</div>
+
 </body>
 </html>
